parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SMALL_K_VOWEL

Grammar

Rule 0     S' -> sentence
Rule 1     sentence -> sentence element
Rule 2     sentence -> element
Rule 3     sentence -> sentence H_WORD
Rule 4     sentence -> H_WORD
Rule 5     sentence -> sentence K_WORD
Rule 6     sentence -> K_WORD
Rule 7     H_WORD -> H_element
Rule 8     H_WORD -> H_element H_WORD
Rule 9     H_element -> HIRAGANA
Rule 10    H_element -> TSU_HIRAGANA HIRAGANA
Rule 11    H_element -> HIRAGANA SMALL_HIRAGANA
Rule 12    H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA
Rule 13    K_WORD -> K_element
Rule 14    K_WORD -> K_element K_WORD
Rule 15    K_element -> KATAKANA
Rule 16    K_element -> TSU_KATAKANA KATAKANA
Rule 17    K_element -> KATAKANA SMALL_KATAKANA
Rule 18    K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA
Rule 19    K_element -> KATAKANA LONG_KATAKANA
Rule 20    K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA
Rule 21    K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA
Rule 22    K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA
Rule 23    element -> KANJI
Rule 24    element -> PUNCTUATION

Terminals, with rules where they appear

HIRAGANA             : 9 10 11 12
KANJI                : 23
KATAKANA             : 15 16 17 18 19 20 21 22
LONG_KATAKANA        : 19 20 21 22
PUNCTUATION          : 24
SMALL_HIRAGANA       : 11 12
SMALL_KATAKANA       : 17 18 21 22
SMALL_K_VOWEL        : 
TSU_HIRAGANA         : 10 12
TSU_KATAKANA         : 16 18 20 22
error                : 

Nonterminals, with rules where they appear

H_WORD               : 3 4 8
H_element            : 7 8
K_WORD               : 5 6 14
K_element            : 13 14
element              : 1 2
sentence             : 1 3 5 0

Parsing method: LALR

state 0

    (0) S' -> . sentence
    (1) sentence -> . sentence element
    (2) sentence -> . element
    (3) sentence -> . sentence H_WORD
    (4) sentence -> . H_WORD
    (5) sentence -> . sentence K_WORD
    (6) sentence -> . K_WORD
    (23) element -> . KANJI
    (24) element -> . PUNCTUATION
    (7) H_WORD -> . H_element
    (8) H_WORD -> . H_element H_WORD
    (13) K_WORD -> . K_element
    (14) K_WORD -> . K_element K_WORD
    (9) H_element -> . HIRAGANA
    (10) H_element -> . TSU_HIRAGANA HIRAGANA
    (11) H_element -> . HIRAGANA SMALL_HIRAGANA
    (12) H_element -> . TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA
    (15) K_element -> . KATAKANA
    (16) K_element -> . TSU_KATAKANA KATAKANA
    (17) K_element -> . KATAKANA SMALL_KATAKANA
    (18) K_element -> . TSU_KATAKANA KATAKANA SMALL_KATAKANA
    (19) K_element -> . KATAKANA LONG_KATAKANA
    (20) K_element -> . TSU_KATAKANA KATAKANA LONG_KATAKANA
    (21) K_element -> . KATAKANA SMALL_KATAKANA LONG_KATAKANA
    (22) K_element -> . TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA

    KANJI           shift and go to state 5
    PUNCTUATION     shift and go to state 6
    HIRAGANA        shift and go to state 9
    TSU_HIRAGANA    shift and go to state 10
    KATAKANA        shift and go to state 11
    TSU_KATAKANA    shift and go to state 12

    sentence                       shift and go to state 1
    element                        shift and go to state 2
    H_WORD                         shift and go to state 3
    K_WORD                         shift and go to state 4
    H_element                      shift and go to state 7
    K_element                      shift and go to state 8

state 1

    (0) S' -> sentence .
    (1) sentence -> sentence . element
    (3) sentence -> sentence . H_WORD
    (5) sentence -> sentence . K_WORD
    (23) element -> . KANJI
    (24) element -> . PUNCTUATION
    (7) H_WORD -> . H_element
    (8) H_WORD -> . H_element H_WORD
    (13) K_WORD -> . K_element
    (14) K_WORD -> . K_element K_WORD
    (9) H_element -> . HIRAGANA
    (10) H_element -> . TSU_HIRAGANA HIRAGANA
    (11) H_element -> . HIRAGANA SMALL_HIRAGANA
    (12) H_element -> . TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA
    (15) K_element -> . KATAKANA
    (16) K_element -> . TSU_KATAKANA KATAKANA
    (17) K_element -> . KATAKANA SMALL_KATAKANA
    (18) K_element -> . TSU_KATAKANA KATAKANA SMALL_KATAKANA
    (19) K_element -> . KATAKANA LONG_KATAKANA
    (20) K_element -> . TSU_KATAKANA KATAKANA LONG_KATAKANA
    (21) K_element -> . KATAKANA SMALL_KATAKANA LONG_KATAKANA
    (22) K_element -> . TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA

    KANJI           shift and go to state 5
    PUNCTUATION     shift and go to state 6
    HIRAGANA        shift and go to state 9
    TSU_HIRAGANA    shift and go to state 10
    KATAKANA        shift and go to state 11
    TSU_KATAKANA    shift and go to state 12

    element                        shift and go to state 13
    H_WORD                         shift and go to state 14
    K_WORD                         shift and go to state 15
    H_element                      shift and go to state 7
    K_element                      shift and go to state 8

state 2

    (2) sentence -> element .

    KANJI           reduce using rule 2 (sentence -> element .)
    PUNCTUATION     reduce using rule 2 (sentence -> element .)
    HIRAGANA        reduce using rule 2 (sentence -> element .)
    TSU_HIRAGANA    reduce using rule 2 (sentence -> element .)
    KATAKANA        reduce using rule 2 (sentence -> element .)
    TSU_KATAKANA    reduce using rule 2 (sentence -> element .)
    $end            reduce using rule 2 (sentence -> element .)


state 3

    (4) sentence -> H_WORD .

    KANJI           reduce using rule 4 (sentence -> H_WORD .)
    PUNCTUATION     reduce using rule 4 (sentence -> H_WORD .)
    HIRAGANA        reduce using rule 4 (sentence -> H_WORD .)
    TSU_HIRAGANA    reduce using rule 4 (sentence -> H_WORD .)
    KATAKANA        reduce using rule 4 (sentence -> H_WORD .)
    TSU_KATAKANA    reduce using rule 4 (sentence -> H_WORD .)
    $end            reduce using rule 4 (sentence -> H_WORD .)


state 4

    (6) sentence -> K_WORD .

    KANJI           reduce using rule 6 (sentence -> K_WORD .)
    PUNCTUATION     reduce using rule 6 (sentence -> K_WORD .)
    HIRAGANA        reduce using rule 6 (sentence -> K_WORD .)
    TSU_HIRAGANA    reduce using rule 6 (sentence -> K_WORD .)
    KATAKANA        reduce using rule 6 (sentence -> K_WORD .)
    TSU_KATAKANA    reduce using rule 6 (sentence -> K_WORD .)
    $end            reduce using rule 6 (sentence -> K_WORD .)


state 5

    (23) element -> KANJI .

    KANJI           reduce using rule 23 (element -> KANJI .)
    PUNCTUATION     reduce using rule 23 (element -> KANJI .)
    HIRAGANA        reduce using rule 23 (element -> KANJI .)
    TSU_HIRAGANA    reduce using rule 23 (element -> KANJI .)
    KATAKANA        reduce using rule 23 (element -> KANJI .)
    TSU_KATAKANA    reduce using rule 23 (element -> KANJI .)
    $end            reduce using rule 23 (element -> KANJI .)


state 6

    (24) element -> PUNCTUATION .

    KANJI           reduce using rule 24 (element -> PUNCTUATION .)
    PUNCTUATION     reduce using rule 24 (element -> PUNCTUATION .)
    HIRAGANA        reduce using rule 24 (element -> PUNCTUATION .)
    TSU_HIRAGANA    reduce using rule 24 (element -> PUNCTUATION .)
    KATAKANA        reduce using rule 24 (element -> PUNCTUATION .)
    TSU_KATAKANA    reduce using rule 24 (element -> PUNCTUATION .)
    $end            reduce using rule 24 (element -> PUNCTUATION .)


state 7

    (7) H_WORD -> H_element .
    (8) H_WORD -> H_element . H_WORD
    (7) H_WORD -> . H_element
    (8) H_WORD -> . H_element H_WORD
    (9) H_element -> . HIRAGANA
    (10) H_element -> . TSU_HIRAGANA HIRAGANA
    (11) H_element -> . HIRAGANA SMALL_HIRAGANA
    (12) H_element -> . TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA

  ! shift/reduce conflict for HIRAGANA resolved as shift
  ! shift/reduce conflict for TSU_HIRAGANA resolved as shift
    KANJI           reduce using rule 7 (H_WORD -> H_element .)
    PUNCTUATION     reduce using rule 7 (H_WORD -> H_element .)
    KATAKANA        reduce using rule 7 (H_WORD -> H_element .)
    TSU_KATAKANA    reduce using rule 7 (H_WORD -> H_element .)
    $end            reduce using rule 7 (H_WORD -> H_element .)
    HIRAGANA        shift and go to state 9
    TSU_HIRAGANA    shift and go to state 10

  ! HIRAGANA        [ reduce using rule 7 (H_WORD -> H_element .) ]
  ! TSU_HIRAGANA    [ reduce using rule 7 (H_WORD -> H_element .) ]

    H_element                      shift and go to state 7
    H_WORD                         shift and go to state 16

state 8

    (13) K_WORD -> K_element .
    (14) K_WORD -> K_element . K_WORD
    (13) K_WORD -> . K_element
    (14) K_WORD -> . K_element K_WORD
    (15) K_element -> . KATAKANA
    (16) K_element -> . TSU_KATAKANA KATAKANA
    (17) K_element -> . KATAKANA SMALL_KATAKANA
    (18) K_element -> . TSU_KATAKANA KATAKANA SMALL_KATAKANA
    (19) K_element -> . KATAKANA LONG_KATAKANA
    (20) K_element -> . TSU_KATAKANA KATAKANA LONG_KATAKANA
    (21) K_element -> . KATAKANA SMALL_KATAKANA LONG_KATAKANA
    (22) K_element -> . TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA

  ! shift/reduce conflict for KATAKANA resolved as shift
  ! shift/reduce conflict for TSU_KATAKANA resolved as shift
    KANJI           reduce using rule 13 (K_WORD -> K_element .)
    PUNCTUATION     reduce using rule 13 (K_WORD -> K_element .)
    HIRAGANA        reduce using rule 13 (K_WORD -> K_element .)
    TSU_HIRAGANA    reduce using rule 13 (K_WORD -> K_element .)
    $end            reduce using rule 13 (K_WORD -> K_element .)
    KATAKANA        shift and go to state 11
    TSU_KATAKANA    shift and go to state 12

  ! KATAKANA        [ reduce using rule 13 (K_WORD -> K_element .) ]
  ! TSU_KATAKANA    [ reduce using rule 13 (K_WORD -> K_element .) ]

    K_element                      shift and go to state 8
    K_WORD                         shift and go to state 17

state 9

    (9) H_element -> HIRAGANA .
    (11) H_element -> HIRAGANA . SMALL_HIRAGANA

    HIRAGANA        reduce using rule 9 (H_element -> HIRAGANA .)
    TSU_HIRAGANA    reduce using rule 9 (H_element -> HIRAGANA .)
    KANJI           reduce using rule 9 (H_element -> HIRAGANA .)
    PUNCTUATION     reduce using rule 9 (H_element -> HIRAGANA .)
    KATAKANA        reduce using rule 9 (H_element -> HIRAGANA .)
    TSU_KATAKANA    reduce using rule 9 (H_element -> HIRAGANA .)
    $end            reduce using rule 9 (H_element -> HIRAGANA .)
    SMALL_HIRAGANA  shift and go to state 18


state 10

    (10) H_element -> TSU_HIRAGANA . HIRAGANA
    (12) H_element -> TSU_HIRAGANA . HIRAGANA SMALL_HIRAGANA

    HIRAGANA        shift and go to state 19


state 11

    (15) K_element -> KATAKANA .
    (17) K_element -> KATAKANA . SMALL_KATAKANA
    (19) K_element -> KATAKANA . LONG_KATAKANA
    (21) K_element -> KATAKANA . SMALL_KATAKANA LONG_KATAKANA

    KATAKANA        reduce using rule 15 (K_element -> KATAKANA .)
    TSU_KATAKANA    reduce using rule 15 (K_element -> KATAKANA .)
    KANJI           reduce using rule 15 (K_element -> KATAKANA .)
    PUNCTUATION     reduce using rule 15 (K_element -> KATAKANA .)
    HIRAGANA        reduce using rule 15 (K_element -> KATAKANA .)
    TSU_HIRAGANA    reduce using rule 15 (K_element -> KATAKANA .)
    $end            reduce using rule 15 (K_element -> KATAKANA .)
    SMALL_KATAKANA  shift and go to state 20
    LONG_KATAKANA   shift and go to state 21


state 12

    (16) K_element -> TSU_KATAKANA . KATAKANA
    (18) K_element -> TSU_KATAKANA . KATAKANA SMALL_KATAKANA
    (20) K_element -> TSU_KATAKANA . KATAKANA LONG_KATAKANA
    (22) K_element -> TSU_KATAKANA . KATAKANA SMALL_KATAKANA LONG_KATAKANA

    KATAKANA        shift and go to state 22


state 13

    (1) sentence -> sentence element .

    KANJI           reduce using rule 1 (sentence -> sentence element .)
    PUNCTUATION     reduce using rule 1 (sentence -> sentence element .)
    HIRAGANA        reduce using rule 1 (sentence -> sentence element .)
    TSU_HIRAGANA    reduce using rule 1 (sentence -> sentence element .)
    KATAKANA        reduce using rule 1 (sentence -> sentence element .)
    TSU_KATAKANA    reduce using rule 1 (sentence -> sentence element .)
    $end            reduce using rule 1 (sentence -> sentence element .)


state 14

    (3) sentence -> sentence H_WORD .

    KANJI           reduce using rule 3 (sentence -> sentence H_WORD .)
    PUNCTUATION     reduce using rule 3 (sentence -> sentence H_WORD .)
    HIRAGANA        reduce using rule 3 (sentence -> sentence H_WORD .)
    TSU_HIRAGANA    reduce using rule 3 (sentence -> sentence H_WORD .)
    KATAKANA        reduce using rule 3 (sentence -> sentence H_WORD .)
    TSU_KATAKANA    reduce using rule 3 (sentence -> sentence H_WORD .)
    $end            reduce using rule 3 (sentence -> sentence H_WORD .)


state 15

    (5) sentence -> sentence K_WORD .

    KANJI           reduce using rule 5 (sentence -> sentence K_WORD .)
    PUNCTUATION     reduce using rule 5 (sentence -> sentence K_WORD .)
    HIRAGANA        reduce using rule 5 (sentence -> sentence K_WORD .)
    TSU_HIRAGANA    reduce using rule 5 (sentence -> sentence K_WORD .)
    KATAKANA        reduce using rule 5 (sentence -> sentence K_WORD .)
    TSU_KATAKANA    reduce using rule 5 (sentence -> sentence K_WORD .)
    $end            reduce using rule 5 (sentence -> sentence K_WORD .)


state 16

    (8) H_WORD -> H_element H_WORD .

    KANJI           reduce using rule 8 (H_WORD -> H_element H_WORD .)
    PUNCTUATION     reduce using rule 8 (H_WORD -> H_element H_WORD .)
    HIRAGANA        reduce using rule 8 (H_WORD -> H_element H_WORD .)
    TSU_HIRAGANA    reduce using rule 8 (H_WORD -> H_element H_WORD .)
    KATAKANA        reduce using rule 8 (H_WORD -> H_element H_WORD .)
    TSU_KATAKANA    reduce using rule 8 (H_WORD -> H_element H_WORD .)
    $end            reduce using rule 8 (H_WORD -> H_element H_WORD .)


state 17

    (14) K_WORD -> K_element K_WORD .

    KANJI           reduce using rule 14 (K_WORD -> K_element K_WORD .)
    PUNCTUATION     reduce using rule 14 (K_WORD -> K_element K_WORD .)
    HIRAGANA        reduce using rule 14 (K_WORD -> K_element K_WORD .)
    TSU_HIRAGANA    reduce using rule 14 (K_WORD -> K_element K_WORD .)
    KATAKANA        reduce using rule 14 (K_WORD -> K_element K_WORD .)
    TSU_KATAKANA    reduce using rule 14 (K_WORD -> K_element K_WORD .)
    $end            reduce using rule 14 (K_WORD -> K_element K_WORD .)


state 18

    (11) H_element -> HIRAGANA SMALL_HIRAGANA .

    HIRAGANA        reduce using rule 11 (H_element -> HIRAGANA SMALL_HIRAGANA .)
    TSU_HIRAGANA    reduce using rule 11 (H_element -> HIRAGANA SMALL_HIRAGANA .)
    KANJI           reduce using rule 11 (H_element -> HIRAGANA SMALL_HIRAGANA .)
    PUNCTUATION     reduce using rule 11 (H_element -> HIRAGANA SMALL_HIRAGANA .)
    KATAKANA        reduce using rule 11 (H_element -> HIRAGANA SMALL_HIRAGANA .)
    TSU_KATAKANA    reduce using rule 11 (H_element -> HIRAGANA SMALL_HIRAGANA .)
    $end            reduce using rule 11 (H_element -> HIRAGANA SMALL_HIRAGANA .)


state 19

    (10) H_element -> TSU_HIRAGANA HIRAGANA .
    (12) H_element -> TSU_HIRAGANA HIRAGANA . SMALL_HIRAGANA

    HIRAGANA        reduce using rule 10 (H_element -> TSU_HIRAGANA HIRAGANA .)
    TSU_HIRAGANA    reduce using rule 10 (H_element -> TSU_HIRAGANA HIRAGANA .)
    KANJI           reduce using rule 10 (H_element -> TSU_HIRAGANA HIRAGANA .)
    PUNCTUATION     reduce using rule 10 (H_element -> TSU_HIRAGANA HIRAGANA .)
    KATAKANA        reduce using rule 10 (H_element -> TSU_HIRAGANA HIRAGANA .)
    TSU_KATAKANA    reduce using rule 10 (H_element -> TSU_HIRAGANA HIRAGANA .)
    $end            reduce using rule 10 (H_element -> TSU_HIRAGANA HIRAGANA .)
    SMALL_HIRAGANA  shift and go to state 23


state 20

    (17) K_element -> KATAKANA SMALL_KATAKANA .
    (21) K_element -> KATAKANA SMALL_KATAKANA . LONG_KATAKANA

    KATAKANA        reduce using rule 17 (K_element -> KATAKANA SMALL_KATAKANA .)
    TSU_KATAKANA    reduce using rule 17 (K_element -> KATAKANA SMALL_KATAKANA .)
    KANJI           reduce using rule 17 (K_element -> KATAKANA SMALL_KATAKANA .)
    PUNCTUATION     reduce using rule 17 (K_element -> KATAKANA SMALL_KATAKANA .)
    HIRAGANA        reduce using rule 17 (K_element -> KATAKANA SMALL_KATAKANA .)
    TSU_HIRAGANA    reduce using rule 17 (K_element -> KATAKANA SMALL_KATAKANA .)
    $end            reduce using rule 17 (K_element -> KATAKANA SMALL_KATAKANA .)
    LONG_KATAKANA   shift and go to state 24


state 21

    (19) K_element -> KATAKANA LONG_KATAKANA .

    KATAKANA        reduce using rule 19 (K_element -> KATAKANA LONG_KATAKANA .)
    TSU_KATAKANA    reduce using rule 19 (K_element -> KATAKANA LONG_KATAKANA .)
    KANJI           reduce using rule 19 (K_element -> KATAKANA LONG_KATAKANA .)
    PUNCTUATION     reduce using rule 19 (K_element -> KATAKANA LONG_KATAKANA .)
    HIRAGANA        reduce using rule 19 (K_element -> KATAKANA LONG_KATAKANA .)
    TSU_HIRAGANA    reduce using rule 19 (K_element -> KATAKANA LONG_KATAKANA .)
    $end            reduce using rule 19 (K_element -> KATAKANA LONG_KATAKANA .)


state 22

    (16) K_element -> TSU_KATAKANA KATAKANA .
    (18) K_element -> TSU_KATAKANA KATAKANA . SMALL_KATAKANA
    (20) K_element -> TSU_KATAKANA KATAKANA . LONG_KATAKANA
    (22) K_element -> TSU_KATAKANA KATAKANA . SMALL_KATAKANA LONG_KATAKANA

    KATAKANA        reduce using rule 16 (K_element -> TSU_KATAKANA KATAKANA .)
    TSU_KATAKANA    reduce using rule 16 (K_element -> TSU_KATAKANA KATAKANA .)
    KANJI           reduce using rule 16 (K_element -> TSU_KATAKANA KATAKANA .)
    PUNCTUATION     reduce using rule 16 (K_element -> TSU_KATAKANA KATAKANA .)
    HIRAGANA        reduce using rule 16 (K_element -> TSU_KATAKANA KATAKANA .)
    TSU_HIRAGANA    reduce using rule 16 (K_element -> TSU_KATAKANA KATAKANA .)
    $end            reduce using rule 16 (K_element -> TSU_KATAKANA KATAKANA .)
    SMALL_KATAKANA  shift and go to state 25
    LONG_KATAKANA   shift and go to state 26


state 23

    (12) H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .

    HIRAGANA        reduce using rule 12 (H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .)
    TSU_HIRAGANA    reduce using rule 12 (H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .)
    KANJI           reduce using rule 12 (H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .)
    PUNCTUATION     reduce using rule 12 (H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .)
    KATAKANA        reduce using rule 12 (H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .)
    TSU_KATAKANA    reduce using rule 12 (H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .)
    $end            reduce using rule 12 (H_element -> TSU_HIRAGANA HIRAGANA SMALL_HIRAGANA .)


state 24

    (21) K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .

    KATAKANA        reduce using rule 21 (K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    TSU_KATAKANA    reduce using rule 21 (K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    KANJI           reduce using rule 21 (K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    PUNCTUATION     reduce using rule 21 (K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    HIRAGANA        reduce using rule 21 (K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    TSU_HIRAGANA    reduce using rule 21 (K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    $end            reduce using rule 21 (K_element -> KATAKANA SMALL_KATAKANA LONG_KATAKANA .)


state 25

    (18) K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .
    (22) K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA . LONG_KATAKANA

    KATAKANA        reduce using rule 18 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .)
    TSU_KATAKANA    reduce using rule 18 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .)
    KANJI           reduce using rule 18 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .)
    PUNCTUATION     reduce using rule 18 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .)
    HIRAGANA        reduce using rule 18 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .)
    TSU_HIRAGANA    reduce using rule 18 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .)
    $end            reduce using rule 18 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA .)
    LONG_KATAKANA   shift and go to state 27


state 26

    (20) K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .

    KATAKANA        reduce using rule 20 (K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .)
    TSU_KATAKANA    reduce using rule 20 (K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .)
    KANJI           reduce using rule 20 (K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .)
    PUNCTUATION     reduce using rule 20 (K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .)
    HIRAGANA        reduce using rule 20 (K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .)
    TSU_HIRAGANA    reduce using rule 20 (K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .)
    $end            reduce using rule 20 (K_element -> TSU_KATAKANA KATAKANA LONG_KATAKANA .)


state 27

    (22) K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .

    KATAKANA        reduce using rule 22 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    TSU_KATAKANA    reduce using rule 22 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    KANJI           reduce using rule 22 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    PUNCTUATION     reduce using rule 22 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    HIRAGANA        reduce using rule 22 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    TSU_HIRAGANA    reduce using rule 22 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .)
    $end            reduce using rule 22 (K_element -> TSU_KATAKANA KATAKANA SMALL_KATAKANA LONG_KATAKANA .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for HIRAGANA in state 7 resolved as shift
WARNING: shift/reduce conflict for TSU_HIRAGANA in state 7 resolved as shift
WARNING: shift/reduce conflict for KATAKANA in state 8 resolved as shift
WARNING: shift/reduce conflict for TSU_KATAKANA in state 8 resolved as shift
